Delete error handling classes, integrate error handling into view-layer correspondents
If the CLI version throws an error, it will crash as intended.
If the JavaFX version throws an error, it will be caught and shown as a blocking alert.